go-grpc-crud/k8s/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      volumes:
        - name: postgres-storage
          emptyDir: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-grpc-crud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-grpc-crud
  template:
    metadata:
      labels:
        app: go-grpc-crud
    spec:
      containers:
        - name: go-grpc-crud
          image: franciscocy97/go-grpc-crud-app:latest
          ports:
            - containerPort: 50051
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
              readOnly: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: config-volume
          configMap:
            name: app-config
