go-grpc-crud/k8s/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: go-grpc-crud-service
spec:
  selector:
    app: go-grpc-crud
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
